Fix dark mode toggle to switch stylesheets

--- a/dev/assets/dark.css
+++ b/dev/assets/dark.css
@@ -44,6 +44,10 @@ h1 a:hover {
 .twitter-link {
   right: 105px; }
 
+.dark-mode-toggle {
+  position: absolute;
+  top: 10px; }
+
 .panel {
   position: relative;
   word-wrap: break-word; }
