--- a/web-assets/_styles.scss
+++ b/web-assets/_styles.scss
@@ -56,6 +56,11 @@ h1 a:hover {
     right: 105px;
 }
 
+.dark-mode-toggle {
+    position: absolute;
+    top: 10px;
+}
+
 .panel {
     position: relative;
     word-wrap: break-word;
